# asha-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  eval-5.2-noop.json  eval-local-preview.json  eval-plan4.json  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0001_baseline.py
backend/app/: main.py
backend/app/abdm/: __init__.py  client.py  routers.py
backend/app/agentic/: __init__.py  orchestrator.py  tools.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  models.py  otp.py  routers.py
backend/app/core/: audit.py  auth.py  disclaimers.py  dpdp_store.py  rate_limit.py  safety.py  supabase_client.py
backend/app/data/: regions.json
backend/app/integrations/: __init__.py  fcm.py  razorpay.py  whatsapp.py
backend/app/jobs/: __init__.py  dpdp_sweeper.py
backend/app/llm/: __init__.py  base.py  gemini.py  llama33_together.py  ollama.py  post_process.py  vision.py
backend/app/ml/: classifier.py  featurize.py  red_flag_classifier.py  shap_explain.py
backend/app/models/: consent.py  risk.py  triage.py
backend/app/nlp/: __init__.py  bhashini.py  rag.py  safety_refusals.py
backend/app/observability/: __init__.py  prometheus.py  sentry.py
backend/app/rag/: embedder.py  fallback_corpus.py  hyde.py  loader.py  nomic_embedder.py  qdrant_client.py  reranker.py  retrieve_v2.py  retriever.py
backend/app/risk/: __init__.py  scoring.py
backend/app/routers/: consent.py  explain.py  health.py  mental_health.py  messages.py  models.py  profile.py  realtime.py  risk.py  sessions.py  sync.py  triage.py  user_data.py  vision.py  voice.py
backend/app/triage_logic/: body_map.py  differential.py  esi.py  extract.py  pipeline.py  red_flags.py  rules.py  severity.py
backend/db/migrations/: 001_plan2_schema.sql  002_plan3_rag.sql  003_plan66_consent.sql
backend/loadtest/: README.md  triage-load.js
backend/scripts/: load_smoke.py  publish_eval_dataset.py  run_dpdp_sweeper.py  run_eval.py  sync_regions.py
backend/tests/: conftest.py  test_agentic.py  test_agentic_endpoint.py  test_authed_endpoints.py  test_consent.py  test_differential.py  test_dpdp_sweeper.py  test_eval_p4.py  test_health.py  test_models_router.py  test_pin_schema_v15.py  test_pipeline_v2.py  test_plan3_endpoints.py  test_rag_retrieval.py  test_realtime.py  test_red_flag_ml.py  test_red_flags.py  test_risk_scoring.py  test_safety_property.py  test_sync.py  test_triage.py  test_user_data.py
docs/: AGENTIC_TOOLS.md  ARCHITECTURE.md  DBMS_REPORT.md  EVAL_CASES.csv  EVAL_SPEC.md  METHODOLOGY.md  RED_FLAGS.md
docs/regulatory/: CDSCO_PATHWAY.md  CLINICAL_EVALUATION_PLAN.md  POST_MARKET_SURVEILLANCE_PLAN.md  QUALITY_MANAGEMENT_SYSTEM.md  RISK_MANAGEMENT_FILE.md
edge/: Modelfile.asha-clinical  README.md  docker-compose.yml  last_smoke.json  run_ollama.py  unplug_demo.ps1
frontend/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/anatomy-source/: README.md
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  icon0.tsx  icon1.tsx  layout.tsx  opengraph-image.tsx  (+2 more)
infra/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml
ml/: README.md  eval_results.json  metrics.txt  pipeline.py  run_eval.py  run_plan2.py  symptom_severity.csv  train.py  train_and_eval.py  train_brain.py  train_red_flag.py  triage_rules.md
scripts/: smoke_5_1_parity.ps1  smoke_5_1_parity.py  verify_demo_ready.ps1
(+101 files in other folders)
