[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asha-ai-backend"
version = "0.2.0"
description = "ASHA-AI triage decision-support backend (Plan 2.0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "supabase>=2.4.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
ml = [
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    "scikit-learn>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
